tests/functional/lang/eval-fail-partition-1.err.exp
error:
       … while calling the 'partition' builtin
         at /pwd/lang/eval-fail-partition-1.nix:1:1:
            1| builtins.partition 1 "foo"
             | ^
            2|

       … while evaluating the first argument passed to builtins.partition

       error: expected a function but found an integer: 1
